# mtf-code

./: .gitignore  Cargo.toml  Qwen2-0.5B-py-output.md  README.md  benchmark_mtf.sh  mtf_benchmark_report.md  run.md
mtf-common/: Cargo.toml
mtf-common/src/: format.rs  hash.rs  lib.rs
mtf-common/tests/: alignment_test.rs
mtf-compiler/: Cargo.toml
mtf-compiler/src/: compiler.rs  lib.rs  main.rs  metadata.rs  tensor.rs  utils.rs  validator.rs
mtf-compiler/tests/: conversion_tests.rs  integration_test.rs
mtf-engine/: Cargo.toml
mtf-engine/src/: engine.rs  main.rs  model.rs  tokenizer.rs  varbuilder.rs
scripts/: download_test_model.py
tests/: alignment_test.rs
