[package]
name = "mtf-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
mtf-common = { path = "../mtf-common" }
byteorder = "1.5"
memmap2 = "0.9"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
serde_json = "1.0"
rayon = "1.8"
zstd = "0.13"

candle-core = { git = "https://github.com/huggingface/candle", rev = "31f35b14", features = [
         "serde",
] }
candle-nn = { git = "https://github.com/huggingface/candle", rev = "31f35b14", features = [
         "serde",
] }
candle-transformers = { git = "https://github.com/huggingface/candle", rev = "31f35b14", features = [
         "serde",
] }
tokenizers = "0.19"
